Actions
Bug #12532
closedunix: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../sun4v/os/suspend.c: In function 'suspend_start': ../../sun4v/os/suspend.c:672: error: passing argument 2 of 'xc_all' makes integer from pointer without a cast ../../sun4/sys/x_call.h:64: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4v/os/suspend.c:672: error: passing argument 3 of 'xc_all' makes integer from pointer without a cast ../../sun4/sys/x_call.h:64: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4v/os/mpo.c: In function 'valid_pages': ../../sun4v/os/mpo.c:1336: error: comparison between pointer and integer ../../sun4v/os/mach_startup.c: In function 'mach_htraptrace_setup': ../../sun4v/os/mach_startup.c:365: error: assignment makes integer from pointer without a cast ../../sun4v/os/mach_startup.c: In function 'mach_htraptrace_configure': ../../sun4v/os/mach_startup.c:428: error: assignment makes integer from pointer without a cast ../../sun4v/os/mach_startup.c:441: error: assignment makes integer from pointer without a cast ../../sun4v/os/mach_startup.c: In function 'mach_htraptrace_cleanup': ../../sun4v/os/mach_startup.c:471: error: assignment makes integer from pointer without a cast ../../sun4v/vm/mach_sfmmu.c: In function 'sfmmu_clear_utsbinfo': ../../sun4v/vm/mach_sfmmu.c:319: error: passing argument 2 of 'hv_set_ctxnon0' makes integer from pointer without a cast ../../sun4v/sys/hypervisor_api.h:357: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4v/os/mach_cpu_states.c: In function 'mdboot': ../../sun4v/os/mach_cpu_states.c:282: error: passing argument 2 of 'callb_execute_class' makes integer from pointer without a cast ../../common/sys/callb.h:201: note: expected 'int' but argument is of type 'void *' ../../sun4v/os/mach_cpu_states.c: In function 'panic_stopcpus': ../../sun4v/os/mach_cpu_states.c:383: error: passing argument 4 of 'xt_some' makes integer from pointer without a cast ../../sun4/sys/x_call.h:69: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4v/os/intrq.c: In function 'cpu_intrq_cleanup': ../../sun4v/os/intrq.c:198: error: assignment makes integer from pointer without a cast ../../sun4v/os/intrq.c:219: error: assignment makes integer from pointer without a cast ../../sun4v/os/intrq.c:229: error: assignment makes integer from pointer without a cast ../../sun4v/os/intrq.c:237: error: assignment makes integer from pointer without a cast ../../sun4v/os/intrq.c:245: error: assignment makes integer from pointer without a cast ../../sun4v/os/intrq.c:253: error: assignment makes integer from pointer without a cast ../../sun4/os/x_call.c: In function 'xc_attention': ../../sun4/os/x_call.c:759: error: passing argument 4 of 'xc_trace' makes integer from pointer without a cast ../../sun4/sys/xc_impl.h:48: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4/os/x_call.c:759: error: passing argument 5 of 'xc_trace' makes integer from pointer without a cast ../../sun4/sys/xc_impl.h:48: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4/os/x_call.c: In function 'xc_dismissed': ../../sun4/os/x_call.c:846: error: passing argument 4 of 'xc_trace' makes integer from pointer without a cast ../../sun4/sys/xc_impl.h:48: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4/os/x_call.c:846: error: passing argument 5 of 'xc_trace' makes integer from pointer without a cast ../../sun4/sys/xc_impl.h:48: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4/os/x_call.c: In function 'xc_loop': ../../sun4/os/x_call.c:991: error: passing argument 4 of 'xc_trace' makes integer from pointer without a cast ../../sun4/sys/xc_impl.h:48: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4/os/x_call.c:991: error: passing argument 5 of 'xc_trace' makes integer from pointer without a cast ../../sun4/sys/xc_impl.h:48: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4/os/x_call.c:1029: error: passing argument 4 of 'xc_trace' makes integer from pointer without a cast ../../sun4/sys/xc_impl.h:48: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4/os/x_call.c:1029: error: passing argument 5 of 'xc_trace' makes integer from pointer without a cast ../../sun4/sys/xc_impl.h:48: note: expected 'uint64_t' but argument is of type ' void *' ../../sparc/syscall/getcontext.c: In function 'savecontext': ../../sparc/syscall/getcontext.c:90: error: comparison between pointer and integer ../../sparc/syscall/getcontext.c: In function 'savecontext32': ../../sparc/syscall/getcontext.c:387: error: comparison between pointer and integer ../../sparc/syscall/getcontext.c:413: error: cast from pointer to integer of different size [-Wpointer-to-int-cast] ../../sparc/syscall/getcontext.c: In function 'getsetcontext32': ../../sparc/syscall/getcontext.c:467: error: cast from pointer to integer of different size [-Wpointer-to-int-cast] ../../sun4/io/ivintr.c: In function 'add_softintr': ../../sun4/io/ivintr.c:271: error: return makes integer from pointer without a cast ../../sun4/os/machdep.c: In function 'cpu_create_intrstat': ../../sun4/os/machdep.c:455: error: passing argument 7 of 'kstat_create_zone' makes integer from pointer without a cast ../../common/sys/kstat.h:795: note: expected 'uchar_t' but argument is of type 'void *' ../../sun4/os/mlsetup.c: In function 'kobj_start': ../../sun4/os/mlsetup.c:411: error: assignment makes integer from pointer without a cast ../../sun4/os/mp_states.c: In function 'idle_other_cpus': ../../sun4/os/mp_states.c:105: error: passing argument 4 of 'xt_some' makes integer from pointer without a cast ../../sun4/sys/x_call.h:69: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4u/os/mach_cpu_states.c: In function 'mdboot': ../../sun4u/os/mach_cpu_states.c:103: error: passing argument 2 of 'callb_execute_class' makes integer from pointer without a cast ../../common/sys/callb.h:201: note: expected 'int' but argument is of type 'void *' ../../sun4u/os/mach_cpu_states.c: In function 'panic_stopcpus': ../../sun4u/os/mach_cpu_states.c:255: error: passing argument 4 of 'xt_some' makes integer from pointer without a cast ../../sun4/sys/x_call.h:69: note: expected 'uint64_t' but argument is of type 'void *' ../../sun4u/os/fillsysinfo.c: In function 'have_eeprom': ../../sun4u/os/fillsysinfo.c:1156: error: comparison between pointer and integer ../../sfmmu/vm/hat_sfmmu.c: In function 'hat_free_end': ../../sfmmu/vm/hat_sfmmu.c:1942: error: passing argument 2 of 'hat_freestat' makes integer from pointer without a cast ../../common/vm/hat.h:505: note: expected 'int' but argument is of type 'void *' ../../sfmmu/vm/hat_sfmmu.c: In function 'sfmmu_check_page_sizes': ../../sfmmu/vm/hat_sfmmu.c:10095: error: comparison between pointer and integer ../../sfmmu/vm/hat_sfmmu.c: In function 'sfmmu_ismtlbcache_demap': ../../sfmmu/vm/hat_sfmmu.c:12089: error: invalid operands to binary - (have 'caddr_t' and 'void *') ../../sparc/v9/os/v9dep.c: In function 'setregs': ../../sparc/v9/os/v9dep.c:822: error: assignment makes integer from pointer without a cast ../../sparc/v9/os/v9dep.c: In function 'sendsig32': ../../sparc/v9/os/v9dep.c:1428: error: cast from pointer to integer of different size [-Wpointer-to-int-cast] ../../sparc/v9/os/v9dep.c:1459: error: cast from pointer to integer of different size [-Wpointer-to-int-cast] ../../sparc/v9/os/v9dep.c: In function 'fpuregset_nto32': ../../sparc/v9/os/v9dep.c:1727: error: assignment makes integer from pointer without a cast ../../sparc/fs/proc/prmachdep.c: In function 'prgetprfpregs': ../../sparc/fs/proc/prmachdep.c:425: error: assignment makes integer from pointer without a cast ../../sparc/fs/proc/prmachdep.c: In function 'prgetprfpregs32': ../../sparc/fs/proc/prmachdep.c:446: error: assignment makes integer from pointer without a cast
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 12551037071c8ef2216bb540edd94a5bff5e90ae
commit 12551037071c8ef2216bb540edd94a5bff5e90ae Author: Toomas Soome <tsoome@me.com> Date: 2020-04-24T18:03:27.000Z 12532 unix: NULL pointer errors Reviewed by: Gary Mills <gary_mills@fastmail.fm> Approved by: Dan McDonald <danmcd@joyent.com>
Actions